--- a/src/components/PokemonDetail/styles.module.scss
+++ b/src/components/PokemonDetail/styles.module.scss
@@ -1,5 +1,8 @@
 .bg {
 	min-height: 100vh;
+	height: 100%;
+	overflow-y: auto;
+	overflow-x: hidden;
 	position: relative;
 	display: flex;
 	flex-direction: column;
@@ -10,7 +13,7 @@
 		max-width: 650px;
 		width: 95%;
 		background-color: white;
-		height: 65vh;
+		// height: 65vh;
 		bottom: 0;
 		position: relative;
 		margin-bottom: 1rem;
@@ -18,6 +21,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		height: 100%;
 
 		img {
 			position: absolute;
@@ -35,4 +39,23 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+
+@media only screen and (max-width: 575px) {
+	.bg {
+		padding-bottom: 8em;
+		padding-top: 8em;
+		.info {
+			img {
+				width: 60%;
+			}
+		}
+	}
+}
+
+@media only screen and (min-width: 576px) and (max-width: 820px) {
+	.bg {
+		padding-top: 8em;
+		padding-bottom: 25em;
+	}
 }
