last details in css

--- a/src/components/Pagination/styles.module.scss
+++ b/src/components/Pagination/styles.module.scss
@@ -8,7 +8,7 @@
 
 	button {
 		padding: 0.6rem;
-		background: #212121;
+		background: #020024;
 		border: none;
 		cursor: pointer;
 		color: #f7f7f7;
@@ -23,6 +23,6 @@
 
 	button[disabled] {
 		cursor: no-drop;
-		background: #666666;
+		background: #00d4ff;
 	}
 }
