--- a/src/components/PokemonDetail/components/Header/styles.module.scss
+++ b/src/components/PokemonDetail/components/Header/styles.module.scss
@@ -46,9 +46,11 @@ header {
 }
 @media only screen and (max-width: 575px) {
 	header {
+		padding-top: 0;
+		padding-bottom: 10em;
 		.left {
 			span {
-				font-size: 17px;
+				font-size: 18px;
 			}
 		}
 	}
